--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<th scope="col">Destination</th>
 					<th scope="col">Frequency (minutes)</th>
 					<th scope="col">Next Arrival</th>
-					<th scope="col">Minutes Away</th>
+					<th scope="col">Minutes Away</th>				
 				</tr>				
 			</thead>
 			<tbody id="userData">
@@ -44,14 +44,22 @@
 	  </div>
 	  <div class="panel-body">
 	    <form id="trains">
-	    	Train Name: <br>
-	    	<input type="text" id="name-input" name="name"><br>
-	    	Destination: <br>
-	    	<input type="text" id="destination-input" name="destination"><br>
-	    	First Train Time (HH:mm): <br>
-	    	<input type="time" id="firstTrain-input" name="firstTrain"><br>
-	    	Frequency (min): <br>
-	    	<input type="number" id="frequency-input" name="frequency"><br>	 		    		    	
+	    	Train Name: 
+	    	<br>
+	    	<input type="text" id="name-input" name="name">
+	    	<br>
+	    	Destination: 
+	    	<br>
+	    	<input type="text" id="destination-input" name="destination">
+	    	<br>
+	    	First Train Time (Military Time: HH:mm): 
+	    	<br>
+	    	<input type="text" id="firstTrain-input" name="firstTrain" required="required" title="Please enter a time matching HH:MM" pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
+	    	<br>
+	    	Frequency (min): 
+	    	<br>
+	    	<input type="number" id="frequency-input" name="frequency">
+	    	<br>	 		    		    	
 	    </form>
 	    <button type="submit" id="formSubmit" class="btn" value="submit">Submit</button>   
 	  </div>
