--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	    	<br>
 	    	<input type="text" id="destination-input" name="destination">
 	    	<br>
-	    	First Train Time (Military Time: HH:mm): 
+	    	First Train Time (Military Time: HH:MM): 
 	    	<br>
-	    	<input type="text" id="firstTrain-input" name="firstTrain" required="required" title="Please enter a time matching HH:MM" pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
+	    	<input type="text" id="firstTrain-input" name="firstTrain" required="required" title="Military time HH:MM" pattern="/^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$/">
 	    	<br>
 	    	Frequency (min): 
 	    	<br>
