--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		    	id="firstTrain-input" 
 		    	name="firstTrain" 
 		    	title="Military time HH:MM" 
-		    	pattern="/^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$/g">
+		    	pattern="/^([01]\d|2[0-3]):?([0-5]\d)$/">
 	    	<br>
 
 	    	Frequency (min): <br>
