--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>			
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="shortcut icon" href="assets/images/train.ico" type="image/x-icon">
 </head>
 <header>
 	<div class="jumbotron">
