--- a/index.html
+++ b/index.html
@@ -18,74 +18,82 @@
 </header>
 
 <body>
-	<div class="panel panel-default">
-	  <div class="panel-heading">
-	  	<h3 class="panel-title">Current Train Times</h3>
-	  </div>
-	  <div class="panel-body">
-	    <table class="table">
-			<thead>
-				<tr>
-					<th scope="col">Train Name</th>
-					<th scope="col">Destination</th>
-					<th scope="col">Frequency (minutes)</th>
-					<th scope="col">Next Arrival</th>
-					<th scope="col">Minutes Away</th>				
-				</tr>				
-			</thead>
-			<tbody id="userData">
-			</tbody>
-	    </table>
-	  </div>
+	<div class="text-center" id="notLoggedIn">
+		<button class="btn btn-default" id="logInButton">
+			Log In with Google
+		</button>
 	</div>
+	
+<!-- ++++++++++++++++++ Display Once Logged In +++++++++++++++++++++++++++++ -->
+	<container id="loggedIn">
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		  	<h3 class="panel-title">Current Train Times</h3>
+		  </div>
+		  <div class="panel-body">
+		    <table class="table">
+				<thead>
+					<tr>
+						<th scope="col">Train Name</th>
+						<th scope="col">Destination</th>
+						<th scope="col">Frequency (minutes)</th>
+						<th scope="col">Next Arrival</th>
+						<th scope="col">Minutes Away</th>
+					</tr>				
+				</thead>
+				<tbody id="userData">
+				</tbody>
+		    </table>
+		  </div>
+		</div>
 
-	<div class="panel panel-default">
-	  <div class="panel-heading">
-	    <h3 class="panel-title">Add A Train</h3>
-	  </div>
-	  <div class="panel-body">
-	    <form id="trains">
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Add A Train</h3>
+		  </div>
+		  <div class="panel-body">
+		    <form id="trains">
 
-	    	Train Name: <br>	
-	    	<input 
-		    	type="text" 
-		    	id="name-input" 
-		    	name="name">
-	    	<br>
+		    	Train Name: <br>	
+		    	<input 
+			    	type="text" 
+			    	id="name-input" 
+			    	name="name">
+		    	<br>
 
-	    	Destination: <br>	
-	    	<input 
-		    	type="text" 
-		    	id="destination-input" 
-		    	name="destination">
-	    	<br>
+		    	Destination: <br>	
+		    	<input 
+			    	type="text" 
+			    	id="destination-input" 
+			    	name="destination">
+		    	<br>
 
-	    	First Train Time (Military Time: HH:MM): <br>
-	    	<input 
-		    	type="text" 
-		    	id="firstTrain-input" 
-		    	name="firstTrain" 
-		    	title="Military time HH:MM" 
-		    	pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
-	    	<br>
+		    	First Train Time (Military Time: HH:MM): <br>
+		    	<input 
+			    	type="text" 
+			    	id="firstTrain-input" 
+			    	name="firstTrain" 
+			    	title="Military time HH:MM" 
+			    	pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
+		    	<br>
 
-	    	Frequency (min): <br>
-	    	<input 
-		    	type="number" 
-		    	id="frequency-input" 
-		    	name="frequency">
-	    	<br>	
+		    	Frequency (min): <br>
+		    	<input 
+			    	type="number" 
+			    	id="frequency-input" 
+			    	name="frequency">
+		    	<br>	
 
-	    </form>
-	    <button 
-		    type="submit" 
-		    id="formSubmit" 
-		    class="btn" 
-		    value="submit">Submit
-		</button>   
-	  </div>
-	</div>	
+		    </form>
+		    <button 
+			    type="submit" 
+			    id="formSubmit" 
+			    class="btn" 
+			    value="submit">Submit
+			</button>   
+		  </div>
+		</div>
+	</container>	
 	<script src="assets/javascript/app.js" type="text/javascript"></script>
-
 </body>
 </html>
